--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     width: 30px;
     height: 50px;
     background-image: url(img/cactus.png);
+    background-size: 20px 40px;
     position: relative;
     top: 100px;
     left: 580px;
